# log_work

./: Cargo.toml  README.md
dot_vim/add_times/: InsertTickets.py
dot_vim/add_times/ftdetect/: work.vim
dot_vim/add_times/ftplugin/: work.vim
src/: main.rs
src/log_work/: jira.rs  mod.rs  required_time.rs  util.rs  work_day.rs
test_data/: 20180509.work  20180510.work  20180511.work  20180512.work  holidays.txt
