[package]
name = "log_work"
version = "0.1.0"
authors = ["belgoking <belgoking@gmx.de>"]
edition = "2018"

[dependencies]
regex = "0.2"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.2"
app_dirs = "1.2"
itertools = "0.10"

# access to JIRA-API for logging

#hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

